[gd_scene load_steps=23 format=2]

[ext_resource path="res://player/Player_iron.gd" type="Script" id=1]
[ext_resource path="res://npc/Iron/shadow.png" type="Texture" id=2]
[ext_resource path="res://npc/Iron/Iron_atlas.png" type="Texture" id=3]
[ext_resource path="res://npc/Iron/Iron_animation.anim" type="Animation" id=4]
[ext_resource path="res://assets/poison_particle.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "guard_back"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "guard_front"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "guard_left"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "guard_right"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "running_back"
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 4.46803e-005 ),
"update": 0,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "running_front"
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61, 62, 63 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "running_left"
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 4.6256e-005 ),
"update": 0,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "running_right"
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.75041e-005 ),
"update": 0,
"values": [ 5.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "sword_back"
length = 4.5
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.466517 ),
"update": 0,
"values": [ 7.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon_area:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5, 2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, -2 ), Vector2( -2, 11 ), Vector2( 6, 7 ), Vector2( -4, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("weapon_area:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5, 2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -160.0, -260.0, -90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("weapon_area/SwordArea:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2.5, 3, 4 ),
"transitions": PoolRealArray( 1.1564e-005, 0.00248936, 8.87655, 0.000290334, 8.87655 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "sword_front"
length = 4.5
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.466516 ),
"update": 0,
"values": [ 7.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon_area:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5, 2, 2.9, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, -13 ), Vector2( 1, -14 ), Vector2( -4, -11 ), Vector2( 4.1, -11.9 ), Vector2( 5, -12 ), Vector2( 6, -3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("weapon_area:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5, 2, 2.9, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0, -90.0, -8.99999, 0.0, 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("weapon_area/SwordArea:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2.5, 2.9, 4 ),
"transitions": PoolRealArray( 1.87858e-005, 0.00012207, 9.84915, 5.31342e-005, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=11]
length = 4.5
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.466516 ),
"update": 0,
"values": [ 7.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon_area:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5, 2, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( -12, -2 ), Vector2( -21, -15 ), Vector2( -11, -24 ), Vector2( 2, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("weapon_area/SwordArea:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2.5, 3, 4 ),
"transitions": PoolRealArray( 0.000135445, 1.4237e-005, 5.09824, 4.31585e-005, 6.27667 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("weapon_area:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.5, 2, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -75.0, -180.0, -130.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=12]
radius = 7.5
height = 14.0

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.979535, 0 ), -2.56361, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
trail_size_modifier = SubResource( 14 )
emission_shape = 1
emission_sphere_radius = 9.83
flag_disable_z = true
gravity = Vector3( 0, -50, 0 )
initial_velocity_random = 1.0
angular_velocity = -30.0
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 0.9
linear_accel = 10.0
linear_accel_random = 1.0
radial_accel = 10.0
radial_accel_random = 1.0
tangential_accel = 12.64
tangential_accel_random = 1.0
damping = 12.52
damping_random = 1.0
angle = -10.0
angle_random = 1.0
scale = 1.1
scale_random = 1.0
hue_variation = 0.1
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 22.3268, 11.6946 )

[sub_resource type="CapsuleShape2D" id=17]
radius = 6.5
height = 13.5

[node name="Iron_player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 2 )
offset = Vector2( 0, 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 3 )
vframes = 12
hframes = 8
frame = 67

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 7.0
anims/guard_back = SubResource( 1 )
anims/guard_front = SubResource( 2 )
anims/guard_left = SubResource( 3 )
anims/guard_right = SubResource( 4 )
anims/running_back = SubResource( 5 )
anims/running_front = SubResource( 6 )
anims/running_left = SubResource( 7 )
anims/running_right = SubResource( 8 )
anims/sword_back = SubResource( 9 )
anims/sword_front = SubResource( 10 )
anims/sword_left = SubResource( 11 )
anims/sword_right = ExtResource( 4 )

[node name="hitbox" type="Area2D" parent="."]

[node name="HitboxArea" type="CollisionShape2D" parent="hitbox"]
rotation = 1.5708
shape = SubResource( 12 )

[node name="poison_particles" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, -7 )
amount = 7
speed_scale = 0.5
randomness = 0.35
process_material = SubResource( 15 )
texture = ExtResource( 5 )

[node name="weapon_area" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 3.75, -10.5 )
rotation = 1.7017

[node name="SwordArea" type="CollisionShape2D" parent="weapon_area"]
position = Vector2( -3.43422, -22.9664 )
shape = SubResource( 16 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 17 )
one_way_collision_margin = 0.0
